@@ -5,6 +5,7 @@ CHANGES IN VERSION 1.7.1
  o add crossMatching, setCrossMatchingPpmTolerance and
    getCrossMatchingPpmTolerance method [2014-04-23 Wed]
  o add plotCrossMatching [2014-04-24 Thu]
+ o add plotCrossMatchingFdr, plotCrossMatchingNonUniqueDiff [2014-04-24 Thu]
 
 CHANGES IN VERSION 1.7.0
 ------------------------
